--- a/bootstrap-fiddling.html
+++ b/bootstrap-fiddling.html
@@ -1,85 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
               rel="stylesheet"
               integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
               crossorigin="anonymous">
-        </head>
-        <body>
-          <div class="container fs-1">
+    </head>
+    <body>
+        <div class="container fs-1">
+            <div class="row">Your Hand, sir:</div>
             <div class="row">
-              Your Hand, sir:
-            </div>
-            <div class="row">
-              <div class="col">
-                This column intentionally left blank
-              </div>
-              <div class="col" style="border: 1px solid;">
-                <div class="row">
-                  North
+                <div class="col">This column intentionally left blank</div>
+                <div class="col" style="border: 1px solid;">
+                    <div class="row">North</div>
+                    <div class="row">
+                        <table class="table">
+                            <tr class="btn-group"
+                                role="group"
+                                aria-label="Spades"
+                                style="border: 3px dotted">
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠2</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠3</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠4</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠5</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠6</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠7</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠8</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠9</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠T</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠J</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠Q</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠K</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary">♠A</button>
+                                </td>
+                            </tr>
+                            <tr class="btn-group"
+                                role="group"
+                                aria-label="Hearts"
+                                style="border: 3px dotted">
+                                <td>Nuttin'</td>
+                            </tr>
+                            <tr class="btn-group"
+                                role="group"
+                                aria-label="Diamonds"
+                                style="border: 3px dotted">
+                                <td>Zip. Nada. Bupkis.</td>
+                            </tr>
+                            <tr class="btn-group"
+                                role="group"
+                                aria-label="Clubs"
+                                style="border: 3px dotted">
+                                <td>-</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-                <div class="row">
-                  <table class="table">
-
-                    <tr class="btn-group" role="group" aria-label="Spades" style="border: 3px dotted;">
-                      <td><button type="button" class="btn btn-primary">♠2</button></td>
-                      <td><button type="button" class="btn btn-primary">♠3</button></td>
-                      <td><button type="button" class="btn btn-primary">♠4</button></td>
-                      <td><button type="button" class="btn btn-primary">♠5</button></td>
-                      <td><button type="button" class="btn btn-primary">♠6</button></td>
-                      <td><button type="button" class="btn btn-primary">♠7</button></td>
-                      <td><button type="button" class="btn btn-primary">♠8</button></td>
-                      <td><button type="button" class="btn btn-primary">♠9</button></td>
-                      <td><button type="button" class="btn btn-primary">♠T</button></td>
-                      <td><button type="button" class="btn btn-primary">♠J</button></td>
-                      <td><button type="button" class="btn btn-primary">♠Q</button></td>
-                      <td><button type="button" class="btn btn-primary">♠K</button></td>
-                      <td><button type="button" class="btn btn-primary">♠A</button></td>
-                    </tr>
-                    <tr class="btn-group" role="group" aria-label="Hearts"  style="border: 3px dotted;">
-                      <td>Nuttin'</td>
-                    </tr>
-                    <tr class="btn-group" role="group" aria-label="Diamonds"  style="border: 3px dotted;">
-                      <td>Zip. Nada. Bupkis.</td>
-                    </tr>
-                    <tr class="btn-group" role="group" aria-label="Clubs"  style="border: 3px dotted;">
-                      <td>-</td>
-                    </tr>
-                  </table>
-                </div>
-              </div>
-              <div class="col">
-
-              </div>
+                <div class="col"></div>
             </div>
             <div class="row">
-              <div class="col" style="border: 1px solid;">
-                Pretend I'm West
-              </div>
-              <div class="col">
-
-              </div>
-              <div class="col" style="border: 1px solid;">
-                Pretend I'm East
-              </div>
+                <div class="col" style="border: 1px solid;">Pretend I'm West</div>
+                <div class="col"></div>
+                <div class="col" style="border: 1px solid;">Pretend I'm East</div>
             </div>
             <div class="row">
-              <div class="col">
-
-              </div>
-              <div class="col" style="border: 1px solid;">
-                Pretend I'm South
-              </div>
-              <div class="col">
-
-              </div>
+                <div class="col"></div>
+                <div class="col" style="border: 1px solid;">Pretend I'm South</div>
+                <div class="col"></div>
             </div>
-          </div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                  crossorigin="anonymous"></script>
-        </body>
-      </html>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+    </body>
+</html>
